--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Devel-NYTProf-4.06.tar.gz: 1cbc721db4685622527856d8751b4a67ced59b20
-sources:
   Devel-NYTProf-5.05.tar.gz: 92b1d093e5eed09852735bf14c9e25115884d20e
+sources:
+  Devel-NYTProf-5.06.tar.gz: 288a662aee26c37560126d1a8b83210891125f83
